# qoi-rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
bench/: Cargo.toml
bench/src/: main.rs
benches/: bench.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: decode.rs  encode.rs  qoi_decode.rs  qoi_encode.rs
libqoi/: Cargo.toml  README.md  build.rs
libqoi/src/: lib.rs  qoi.c
qoi-bench/: Cargo.toml
qoi-bench/src/: main.rs
src/: canonical.rs  colorspace.rs  consts.rs  decode.rs  encode.rs  error.rs  header.rs  lib.rs  pixel.rs  types.rs  utils.rs
tests/: test_chunks.rs  test_gen.rs  test_misc.rs  test_ref.rs
