[package]
name = "qoi-fast"
version = "0.2.0"
description = "VERY fast encoder/decoder for QOI (Quite Okay Image) format"
authors = ["Ivan Smirnov <rust@ivan.smirnov.ie>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/aldanor/qoi-fast"
homepage = "https://github.com/aldanor/qoi-fast"
documentation = "https://docs.rs/qoi-fast"
categories = ["multimedia::images", "multimedia::encoding"]
keywords = ["qoi", "graphics", "image", "encoding"]
exclude = [
    "assets/*",
]

[features]
default = ["std"]
alloc = []      # provides access to `Vec` without enabling `std` mode
std = []        # std mode (enabled by default) - provides access to `std::io`, `Error` and `Vec`
reference = []  # follows reference encoder implementation precisely, but may be slightly slower

[dependencies]
bytemuck = "1.7"

[workspace]
members = ["qoi-bench"]

[dev-dependencies]
anyhow = "1.0"
png = "0.17"
walkdir = "2.3"
cfg-if = "1.0"

[lib]
name = "qoi_fast"
path = "src/lib.rs"
doctest = false

[profile.test]
opt-level = 3
