[package]
name = "qoi"
version = "0.4.1"
description = "VERY fast encoder/decoder for QOI (Quite Okay Image) format"
authors = ["Ivan Smirnov <rust@ivan.smirnov.ie>"]
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/aldanor/qoi-rust"
homepage = "https://github.com/aldanor/qoi-rust"
documentation = "https://docs.rs/qoi"
categories = ["multimedia::images", "multimedia::encoding"]
keywords = ["qoi", "graphics", "image", "encoding"]
exclude = [
    "assets",
    "doc",
    "ext",
    ".github",
    "tests/test_gen.rs",
    "tests/test_ref.rs",
]
rust-version = "1.67.0"

[features]
default = ["std"]
# provides access to `Vec` without enabling `std` mode
alloc = []
# std mode (enabled by default) - provides access to `std::io`, `Error` and `Vec`
std = []
# follows reference encoder implementation precisely, but may be slower
reference = []

[dependencies]
bytemuck = "1.22"

[dev-dependencies]
# external
anyhow = "1.0"
cfg-if = "1.0"
png = "0.17"
rand = "0.9"
rand_distr = "0.5"
walkdir = "2.5"
# internal
libqoi = { path = "libqoi" }

[lib]
name = "qoi"
path = "src/lib.rs"
doctest = false

[profile.test]
opt-level = 3
