[package]
name = "qoi-fast-fuzz"
version = "0.1.0"
authors = ["Ivan Smirnov <rust@ivan.smirnov.ie>"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
# internal
qoi = { path = ".." }
# external
libfuzzer-sys = "0.4"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "encode"
path = "fuzz_targets/encode.rs"
test = false
doc = false

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
