[package]
name = "libqoi"
version = "0.1.0"
edition = "2018"
license = "MIT/Apache-2.0"
authors = ["Ivan Smirnov <rust@ivan.smirnov.ie>"]
description = "Bindings to the original qoi.h (for test purposes only)"
publish = false

[dependencies]
anyhow = "1.0"
c_vec = "2.0"
libc = "0.2"

[build-dependencies]
cc = "1.0"
